fix warnings in code